Updated several forest levels to have better serialized data.   Tweaked a couple of values to not be serialized.

--- a/data/level/Forest/bothersome-bog.cfg
+++ b/data/level/Forest/bothersome-bog.cfg
@@ -706,7 +706,7 @@
 			"label": "_2354656",
 			"type": "mushroom_shooter_red",
 			"x": 3616,
-			"y": 160
+			"y": 159
 		},
 		{
 			"_uuid": "bc9290750df94b99b4349d9d733d75ec",
@@ -716,7 +716,7 @@
 			"label": "_7db20e77",
 			"type": "mushroom_shooter_red",
 			"x": 4096,
-			"y": 96
+			"y": 95
 		},
 		{
 			"_uuid": "c447d34ec8e7425da54abfaf3ace293b",
@@ -726,7 +726,7 @@
 			"label": "_76b2a7c1",
 			"type": "mushroom_shooter_red",
 			"x": 5792,
-			"y": 416
+			"y": 415
 		},
 		{
 			"_uuid": "734720a16d074f12a9a3ef3c4e42931d",
@@ -756,7 +756,7 @@
 			"label": "_31ed1716",
 			"type": "mushroom_shooter_red",
 			"x": 1920,
-			"y": 192
+			"y": 191
 		},
 		{
 			"_uuid": "48be3be98d8d4a55a8b3f1af4d082759",
@@ -766,7 +766,7 @@
 			"label": "_22e1b9eb",
 			"type": "mushroom_shooter_red",
 			"x": 256,
-			"y": 512
+			"y": 511
 		},
 		{
 			"_uuid": "b67c33e2326e4670bccabb0d4a26e8b6",
@@ -1066,7 +1066,7 @@
 			"label": "_14e9b769",
 			"type": "mushroom_shooter_red",
 			"x": 6176,
-			"y": 416
+			"y": 415
 		},
 		{
 			"_uuid": "b89aa027229b473b8438ecc705f25069",
@@ -1497,7 +1497,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf
@@ -1560,16 +1560,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"y": -288,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background_behind_trees"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",
@@ -1865,36 +1855,6 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foliage_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
 		},
 		{
@@ -1905,7 +1865,7 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_scaffolding_foreground"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lef,lef,,,,,,,,,lef,lef,lef,lef,lef,lef,,,,,lef,lef,,,lef,lef
@@ -2082,26 +2042,6 @@ msh,msh,,,,,,,msh",
 			"y": -352,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Bothersome Bog",
