--- a/data/level/Forest/ignominous-interlude.cfg
+++ b/data/level/Forest/ignominous-interlude.cfg
@@ -6,7 +6,7 @@
 	"background_palette": "forest_dread",
 	"character": [
 		{
-			"_addr": "0x120029000",
+			"_uuid": "3dedf7c997ee46de853a2cb437cf9b0b",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_487c3abf",
@@ -16,7 +16,7 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x120029800",
+			"_uuid": "33a25eb23e5a4e88ab47813b1ba8ec94",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7baabce5",
@@ -25,7 +25,7 @@
 			"y": -242
 		},
 		{
-			"_addr": "0x12002a000",
+			"_uuid": "987bf698cab64126b23958bd21a67dda",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_30cbf824",
@@ -34,7 +34,7 @@
 			"y": 255
 		},
 		{
-			"_addr": "0x12002a800",
+			"_uuid": "1a2f94364376407485b3976d50dae06b",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -45,7 +45,7 @@
 			"zsub_order": 2
 		},
 		{
-			"_addr": "0x12002b000",
+			"_uuid": "5cb1fb931f624b5aa2b8b505566d6b6f",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -55,7 +55,7 @@
 			"y": 324
 		},
 		{
-			"_addr": "0x12002b800",
+			"_uuid": "3b09f596e5df4589ad24e77cde291990",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -65,7 +65,7 @@
 			"y": 456
 		},
 		{
-			"_addr": "0x12002c000",
+			"_uuid": "4b61bc05cb03415f8130c187e28ecda3",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -76,7 +76,7 @@
 			"zsub_order": 2
 		},
 		{
-			"_addr": "0x12002c800",
+			"_uuid": "0d9aa41abdb04cd1a0555c70098753b9",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -92,7 +92,7 @@
 			"y": 341
 		},
 		{
-			"_addr": "0x12002d000",
+			"_uuid": "9c5531b77f3243a9b59c81c7d7aa4846",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -103,7 +103,7 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x12002d800",
+			"_uuid": "4ad6476ff53b4b329cb2016eef9e346c",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -114,7 +114,7 @@
 			"zsub_order": 3
 		},
 		{
-			"_addr": "0x120046400",
+			"_uuid": "fd6a62bd36a443518da389767f5e94a2",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -124,7 +124,7 @@
 			"y": 544
 		},
 		{
-			"_addr": "0x120046c00",
+			"_uuid": "760afc94530f4d82957ec6f3654726ee",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_2e5d0f7",
@@ -133,7 +133,7 @@
 			"y": 352
 		},
 		{
-			"_addr": "0x120047400",
+			"_uuid": "f815ac940ecd4ea7998b08b1abf8469c",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -143,7 +143,7 @@
 			"y": 160
 		},
 		{
-			"_addr": "0x120047c00",
+			"_uuid": "1a698bba8b5242339d2478b8fa002719",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -153,7 +153,7 @@
 			"y": 448
 		},
 		{
-			"_addr": "0x120048400",
+			"_uuid": "eb3742f09ad1434b9b4f94c3c36e94ee",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -163,7 +163,7 @@
 			"y": 992
 		},
 		{
-			"_addr": "0x120048c00",
+			"_uuid": "cbef21a33415423b80890986c3fdb493",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_34d1aaab",
@@ -172,7 +172,7 @@
 			"y": 672
 		},
 		{
-			"_addr": "0x120049400",
+			"_uuid": "17f80982bc124c979ff397b10077d91c",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -182,7 +182,7 @@
 			"y": 384
 		},
 		{
-			"_addr": "0x120049c00",
+			"_uuid": "58f5848302764a0cb4b910937b07d5a3",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_228e14e5",
@@ -191,7 +191,7 @@
 			"y": 192
 		},
 		{
-			"_addr": "0x12004a400",
+			"_uuid": "0cc54d7e08da413f991348008c5993c8",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_3a6fe740",
@@ -200,7 +200,7 @@
 			"y": -65
 		},
 		{
-			"_addr": "0x12004ac00",
+			"_uuid": "a12bc5cd3630435ea1516a244d509233",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_11d4b764",
@@ -209,7 +209,7 @@
 			"y": -33
 		},
 		{
-			"_addr": "0x12004b400",
+			"_uuid": "8595851b89364b86953fdffdfe70bfe1",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7eab5f04",
@@ -225,7 +225,7 @@
 			"y": 681
 		},
 		{
-			"_addr": "0x12004bc00",
+			"_uuid": "936ba4729f554729806f32d39928e503",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7cf49ad1",
@@ -240,7 +240,7 @@
 			"y": -32
 		},
 		{
-			"_addr": "0x12004c400",
+			"_uuid": "520b273a52e64b53bed021d163e8d150",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_671e8229",
@@ -249,7 +249,7 @@
 			"y": -224
 		},
 		{
-			"_addr": "0x12004cc00",
+			"_uuid": "4afb6f9f305345e4b9779a5c81b46efb",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -259,7 +259,7 @@
 			"y": -352
 		},
 		{
-			"_addr": "0x12004d400",
+			"_uuid": "2f0148f410af4d56b729b867b3a4fd28",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_611f9f78",
@@ -268,7 +268,7 @@
 			"y": -96
 		},
 		{
-			"_addr": "0x12004dc00",
+			"_uuid": "20ceca7f7c174942a38a806ea7a0ef5d",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -278,7 +278,7 @@
 			"y": 160
 		},
 		{
-			"_addr": "0x12004e400",
+			"_uuid": "81f90649d6a44083a178fa3a2ba1d4db",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_74fc6bc0",
@@ -287,7 +287,7 @@
 			"y": 448
 		},
 		{
-			"_addr": "0x12004ec00",
+			"_uuid": "c4d2ab5009ae425d942f0ed489674a7e",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -297,7 +297,7 @@
 			"y": 736
 		},
 		{
-			"_addr": "0x12004f400",
+			"_uuid": "5161d3fb4eec40bba563472c73609093",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_46e4d21a",
@@ -306,7 +306,7 @@
 			"y": -96
 		},
 		{
-			"_addr": "0x12004fc00",
+			"_uuid": "6ca88b4f86b6484a90dd6452e754d955",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_81a2fff",
@@ -315,7 +315,7 @@
 			"y": 480
 		},
 		{
-			"_addr": "0x120050400",
+			"_uuid": "2a0231acad3d4ee281c884900ccd222d",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -325,7 +325,7 @@
 			"y": 608
 		},
 		{
-			"_addr": "0x120050c00",
+			"_uuid": "ada8361e3cb0410fa31fd038a139127e",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -335,7 +335,7 @@
 			"y": 832
 		},
 		{
-			"_addr": "0x120051400",
+			"_uuid": "95fd4b36d9794598929a994f60292f2a",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_4e2b8d36",
@@ -344,7 +344,7 @@
 			"y": 928
 		},
 		{
-			"_addr": "0x120051c00",
+			"_uuid": "f54e8353c64e47e58f999fcf46661c33",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_211c3e83",
@@ -353,7 +353,7 @@
 			"y": 640
 		},
 		{
-			"_addr": "0x120052400",
+			"_uuid": "e8de3854f5914d1ba988885c9fce1b1c",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_17af55d",
@@ -362,7 +362,7 @@
 			"y": 256
 		},
 		{
-			"_addr": "0x120052c00",
+			"_uuid": "ebc352c5e9bc41cebce89b84015b8ecc",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_2f499277",
@@ -371,10 +371,10 @@
 			},
 			"type": "gate",
 			"x": 5472,
-			"y": 843
+			"y": 837
 		},
 		{
-			"_addr": "0x120053c00",
+			"_uuid": "c89526071abc45b8ad9d4f21e4816c9b",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_cace68a",
@@ -390,7 +390,7 @@
 			"y": -910
 		},
 		{
-			"_addr": "0x120037400",
+			"_uuid": "b3257cbb4eef455eac15367bd09f5aff",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_71638751",
@@ -406,7 +406,7 @@
 			"y": -896
 		},
 		{
-			"_addr": "0x120037c00",
+			"_uuid": "d31b027e53384213b489db4a9d1d3c14",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7febc063",
@@ -422,7 +422,7 @@
 			"y": -992
 		},
 		{
-			"_addr": "0x120038400",
+			"_uuid": "ecef0f8a92e248a9a84e94aafb9648cd",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_62fba93a",
@@ -437,7 +437,7 @@
 			"y": -1264
 		},
 		{
-			"_addr": "0x120038c00",
+			"_uuid": "873833cc819843e3b3be87923715f37f",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -447,7 +447,7 @@
 			"y": -1088
 		},
 		{
-			"_addr": "0x120039400",
+			"_uuid": "1a4ccb6f0c324d3b8f063b44a956d726",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_532dc3fe",
@@ -456,7 +456,7 @@
 			"y": -1152
 		},
 		{
-			"_addr": "0x120039c00",
+			"_uuid": "a91aa66d92cb447f8f2326ffc77ac8e9",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -466,7 +466,7 @@
 			"y": -1184
 		},
 		{
-			"_addr": "0x12005a400",
+			"_uuid": "e17c7adb0ff444ebb0511bba1e4921aa",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_29e70d73",
@@ -475,7 +475,7 @@
 			"y": -1248
 		},
 		{
-			"_addr": "0x12005ac00",
+			"_uuid": "0407189f42404675b79ae5f322e3a814",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_6093f206",
@@ -490,7 +490,7 @@
 			"y": -1460
 		},
 		{
-			"_addr": "0x12005b400",
+			"_uuid": "e833c65c4b9d4f54b3859b95f1592a0a",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_660f31ce",
@@ -502,7 +502,7 @@
 			"y": -1634
 		},
 		{
-			"_addr": "0x12005bc00",
+			"_uuid": "315abe42738a4cd29b551854612bf572",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_156dc210",
@@ -515,7 +515,7 @@
 			"y": -1440
 		},
 		{
-			"_addr": "0x12005c400",
+			"_uuid": "cd69d0cdb0d7496c9763057f56ce8931",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5821c98e",
@@ -528,7 +528,7 @@
 			"y": -1504
 		},
 		{
-			"_addr": "0x12005cc00",
+			"_uuid": "b78272c8334a473ba876b29e849919f8",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_35352b27",
@@ -537,7 +537,7 @@
 			"y": -1213
 		},
 		{
-			"_addr": "0x120064e00",
+			"_uuid": "b64a0a07f3994256bd0c96329c276b79",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_26be80ab",
@@ -550,7 +550,7 @@
 			"y": 800
 		},
 		{
-			"_addr": "0x120065600",
+			"_uuid": "0eb7b3662bf7403aaa5434656e4b93b1",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_f5b175a",
@@ -563,7 +563,7 @@
 			"y": 704
 		},
 		{
-			"_addr": "0x120065e00",
+			"_uuid": "3e24cc2a83774d8e8dadd3f2a3c24545",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_2fdddb0f",
@@ -576,7 +576,7 @@
 			"y": 608
 		},
 		{
-			"_addr": "0x120066600",
+			"_uuid": "b57fd0980f2f411893d76c6d697d9604",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_6b59dfa4",
@@ -589,7 +589,7 @@
 			"y": 416
 		},
 		{
-			"_addr": "0x120066e00",
+			"_uuid": "bc02a0b9fd3642e9b5879cbb8149eff0",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_6a1f2e16",
@@ -602,7 +602,7 @@
 			"y": 544
 		},
 		{
-			"_addr": "0x120067600",
+			"_uuid": "f733c04935614befb16ec218ad88ee0e",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_71389d39",
@@ -615,7 +615,7 @@
 			"y": 544
 		},
 		{
-			"_addr": "0x120067e00",
+			"_uuid": "7d3ef913a0244975a9e66a6a5a2ccbfa",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_542b5d52",
@@ -628,7 +628,7 @@
 			"y": 576
 		},
 		{
-			"_addr": "0x120068600",
+			"_uuid": "a3973259caaf40dcab06222be5099c28",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_331081f5",
@@ -641,7 +641,7 @@
 			"y": 320
 		},
 		{
-			"_addr": "0x120068e00",
+			"_uuid": "c7f2381af4614b8f9b3584479de2687d",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5b5e955c",
@@ -656,7 +656,7 @@
 			"y": 992
 		},
 		{
-			"_addr": "0x120069600",
+			"_uuid": "dfdc49c0b0ca42668af1509571cc93ea",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_2d85e1b1",
@@ -668,7 +668,7 @@
 			"y": 254
 		},
 		{
-			"_addr": "0x120069e00",
+			"_uuid": "35c155ddace34c03bec2b609ab0751b6",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_67c333af",
@@ -689,7 +689,7 @@
 			"y": 224
 		},
 		{
-			"_addr": "0x12006ee00",
+			"_uuid": "6349f0f12dc5415fbce7a013e35298cd",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_65599646",
@@ -704,7 +704,7 @@
 			"y": 320
 		},
 		{
-			"_addr": "0x12006f800",
+			"_uuid": "dcf54b5deef04811b50f48e2ddea7631",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_f4d2955",
@@ -719,7 +719,7 @@
 			"y": 367
 		},
 		{
-			"_addr": "0x120070000",
+			"_uuid": "204b7234a8434fa0a161ecf18bb0c1e6",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_46ef88f9",
@@ -728,7 +728,7 @@
 			"y": 1001
 		},
 		{
-			"_addr": "0x120070800",
+			"_uuid": "22dbd5a446c2496a86fbc1d61ef5fe26",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_6d143f28",
@@ -737,7 +737,7 @@
 			"y": 1027
 		},
 		{
-			"_addr": "0x120071000",
+			"_uuid": "e75a24ab16bf4b3dab090aeba0fbed40",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5b7e5903",
@@ -746,7 +746,7 @@
 			"y": 958
 		},
 		{
-			"_addr": "0x120071800",
+			"_uuid": "b2eb80017d134c47893a3babebbefe38",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_3fcd1b9a",
@@ -755,7 +755,7 @@
 			"y": 279
 		},
 		{
-			"_addr": "0x120072000",
+			"_uuid": "a28c8e706c1344b3975ffd03c065e50c",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_224e554b",
@@ -764,7 +764,7 @@
 			"y": -378
 		},
 		{
-			"_addr": "0x120072800",
+			"_uuid": "1d85a417ab1047f884049c8e1f24d0d0",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_754addd9",
@@ -773,7 +773,7 @@
 			"y": 966
 		},
 		{
-			"_addr": "0x120073000",
+			"_uuid": "aefe59a98d24441cab98f00e687ae1bb",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_8ca0f2f",
@@ -783,7 +783,7 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x120073800",
+			"_uuid": "4138247b9d9846ff9e309ae20fc5bd57",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -793,7 +793,7 @@
 			"y": 1062
 		},
 		{
-			"_addr": "0x120074000",
+			"_uuid": "ca23526f3cd646be96d04f43106aceb0",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -804,7 +804,7 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x120074800",
+			"_uuid": "9fec0418af2343498d695d792d6cb921",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -814,7 +814,7 @@
 			"y": 680
 		},
 		{
-			"_addr": "0x120075000",
+			"_uuid": "497b8f90879f48a58d0bfc0b73f0135a",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -824,7 +824,7 @@
 			"y": 389
 		},
 		{
-			"_addr": "0x120075800",
+			"_uuid": "2f8d7860efd4453c9f5a8791bd05de34",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
@@ -834,7 +834,7 @@
 			"y": 385
 		},
 		{
-			"_addr": "0x1054e6a00",
+			"_uuid": "e8a063441e7b4dbe93228859952b11b9",
 			"current_frame": "normal",
 			"custom": true,
 			"is_human": true,
@@ -1311,17 +1311,17 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 		"area": [
 			{
 				"color": [0.078431,0.078431,0.392156,0.980391],
-				"object": "@eval deserialize('0x120037400')",
+				"object": "@eval deserialize('b3257cbb4eef455eac15367bd09f5aff')",
 				"rect": [5340,-1056,6272,-752]
 			},
 			{
 				"color": [0.078431,0.078431,0.392156,0.980391],
-				"object": "@eval deserialize('0x120053c00')",
+				"object": "@eval deserialize('c89526071abc45b8ad9d4f21e4816c9b')",
 				"rect": [4519,-992,5344,-688]
 			},
 			{
 				"color": [0.078431,0.078431,0.392156,0.980391],
-				"object": "@eval deserialize('0x120037c00')",
+				"object": "@eval deserialize('d31b027e53384213b489db4a9d1d3c14')",
 				"rect": [6268,-1092,6848,-842]
 			}
 		],
