--- a/data/level/Forest/putrid-pools.cfg
+++ b/data/level/Forest/putrid-pools.cfg
@@ -78,7 +78,7 @@
 			"min_difficulty": "challenging",
 			"type": "mushroom_shooter_red",
 			"x": 1504,
-			"y": -64
+			"y": -65
 		},
 		{
 			"_uuid": "fb2c0789a90342b7a243fdbb5c2b821e",
@@ -464,7 +464,7 @@
 			"label": "_60ed",
 			"type": "mushroom_shooter_red",
 			"x": 3136,
-			"y": -2400
+			"y": -2402
 		},
 		{
 			"_uuid": "96659cc6171d46f1a25b1ae644faf268",
@@ -513,7 +513,7 @@
 			"label": "_3be9",
 			"type": "mushroom_shooter_red",
 			"x": 3776,
-			"y": -3264
+			"y": -3266
 		},
 		{
 			"_uuid": "7d1e6b128dfd4cde8989c626bfdcc37e",
@@ -805,7 +805,7 @@
 			"label": "_2743",
 			"type": "mushroom_shooter_red",
 			"x": 3040,
-			"y": -3008
+			"y": -3009
 		},
 		{
 			"_uuid": "39f0e11857e549acbb16cc20876be845",
@@ -893,7 +893,7 @@
 			"label": "_40ec",
 			"type": "mushroom_shooter_red",
 			"x": -704,
-			"y": 1184
+			"y": 1183
 		},
 		{
 			"_uuid": "7a1fb74932f240d0b78669716a6e85ab",
@@ -903,7 +903,7 @@
 			"label": "_2161",
 			"type": "mushroom_shooter_red",
 			"x": -544,
-			"y": 1184
+			"y": 1183
 		},
 		{
 			"_uuid": "d8e04b53af0943a48df166c4d2294761",
@@ -1525,7 +1525,7 @@
 			"min_difficulty": "challenging",
 			"type": "mushroom_shooter_red",
 			"x": 160,
-			"y": 96
+			"y": 95
 		},
 		{
 			"_uuid": "781b420bf9bb433fabf37195d389caf3",
@@ -1535,7 +1535,7 @@
 			"label": "_71ebc410",
 			"type": "mushroom_shooter_red",
 			"x": 1440,
-			"y": -64
+			"y": -65
 		},
 		{
 			"_uuid": "5fb77b33bf764121b63788e94c34d483",
@@ -1546,7 +1546,7 @@
 			"min_difficulty": "challenging",
 			"type": "mushroom_shooter_red",
 			"x": 704,
-			"y": 64
+			"y": 63
 		},
 		{
 			"_uuid": "59e438fcd95b4aa093ba3ca55b309125",
@@ -1556,7 +1556,7 @@
 			"label": "_498637df",
 			"type": "mushroom_shooter_red",
 			"x": -1888,
-			"y": 32
+			"y": 31
 		},
 		{
 			"_uuid": "977e1b0adfec4bac89cd18998f7d2634",
@@ -1567,7 +1567,7 @@
 			"min_difficulty": "challenging",
 			"type": "mushroom_shooter_red",
 			"x": -2656,
-			"y": 256
+			"y": 255
 		},
 		{
 			"_uuid": "27478ef5dc7945a4985a3d4fa4a5f925",
@@ -1577,7 +1577,7 @@
 			"label": "_4efa5f6a",
 			"type": "mushroom_shooter_red",
 			"x": -3488,
-			"y": -19
+			"y": -33
 		},
 		{
 			"_uuid": "bea994a19d8e497cba398808502a1b6c",
@@ -2601,101 +2601,24 @@
 	"serialized_objects": {
 		"character": [
 			{
-				"_uuid": "9f2e6ab9db8d41879e22f6cb6540d0c7",
-				"activation_area": [1854,60,3233,639],
+				"_uuid": "4b7a0ef1f7b647c1aca748e0adcdb00d",
+				"activation_area": [78,108,689,511],
 				"created": true,
 				"current_frame": "normal",
 				"custom": true,
-				"cycle": 27,
-				"label": "_74919655",
+				"cycle": 34,
+				"label": "_79267b9b",
 				"particles": "bubbles,fizz",
 				"property_data": {
-					"_x2_bound": 3184,
-					"_x_bound": 1904,
-					"_y2_bound": 640,
-					"_y_bound": 160,
-					"acid_surface_bubbles": "@eval deserialize('ccfd6cb1476849f6b6544f42e9860687')",
-					"liquid_surface": "@eval deserialize('814dd9686ea64997b2a0da2beceae308')",
-					"top_obj": "@eval deserialize('42eb0bff7c5b458ca363c3d90dbfd5e6')",
-					"underlay_obj": "@eval deserialize('c3aebe405b3d44ad95a1919f8f163288')"
+					"_x2_bound": 640,
+					"_x_bound": 128,
+					"_y2_bound": 512,
+					"_y_bound": 208
 				},
-				"time_in_frame": 26,
+				"time_in_frame": 33,
 				"type": "acid_controller",
-				"x": 3168,
-				"y": 384
-			},
-			{
-				"_uuid": "a70904a7b7ab497bb9ad91f293e00d37",
-				"activation_area": [3134,60,3761,1855],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 20,
-				"label": "_14cc",
-				"particles": "bubbles,fizz",
-				"property_data": {
-					"_x2_bound": 3712,
-					"_x_bound": 3184,
-					"_y2_bound": 1856,
-					"_y_bound": 160,
-					"acid_surface_bubbles": "@eval deserialize('f94807c938e1494d8e2a49a542975f15')",
-					"liquid_surface": "@eval deserialize('70abcd2d30dd41099b52e45fc90dcc70')",
-					"top_obj": "@eval deserialize('23595dd5356b4b8082ed7b6178fb58ce')",
-					"underlay_obj": "@eval deserialize('1fdedcfa41c246e6b07f48abb45d3310')"
-				},
-				"time_in_frame": 19,
-				"type": "acid_controller",
-				"x": 3392,
-				"y": 352
-			},
-			{
-				"_uuid": "e16c55b6611b45689ba0fee78c57a982",
-				"activation_area": [1054,1436,1809,1727],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 25,
-				"label": "_7d93",
-				"particles": "bubbles,fizz",
-				"property_data": {
-					"_x2_bound": 1760,
-					"_x_bound": 1104,
-					"_y2_bound": 1728,
-					"_y_bound": 1536,
-					"acid_surface_bubbles": "@eval deserialize('a88c16596c1141328e70f571c9266011')",
-					"liquid_surface": "@eval deserialize('ffb2529725d842688d2f331b1bf06d14')",
-					"top_obj": "@eval deserialize('febe583c6f454f71819ff76d217d1f82')",
-					"underlay_obj": "@eval deserialize('2145bd5339db4dd4ba714b6239cc7b49')"
-				},
-				"time_in_frame": 24,
-				"type": "acid_controller",
-				"upside_down": true,
-				"x": 1376,
-				"y": 1504
-			},
-			{
-				"_uuid": "4458b656933043e8b77ca68e8320f460",
-				"activation_area": [-258,1452,1153,1855],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 25,
-				"label": "_1b37",
-				"particles": "bubbles,fizz",
-				"property_data": {
-					"_x2_bound": 1104,
-					"_x_bound": -208,
-					"_y2_bound": 1856,
-					"_y_bound": 1552,
-					"acid_surface_bubbles": "@eval deserialize('b90a25fab6d54e1d8cbede8436e8e220')",
-					"liquid_surface": "@eval deserialize('5fb0ff96c92244828ed260addc16c663')",
-					"top_obj": "@eval deserialize('5c5febc9c4e14bf1a7861c6414bf5cf0')",
-					"underlay_obj": "@eval deserialize('0b4e8e2921cb478c88279a644a0e870a')"
-				},
-				"time_in_frame": 24,
-				"type": "acid_controller",
-				"x": 192,
-				"y": 1632
+				"x": 160,
+				"y": 224
 			},
 			{
 				"_uuid": "165a07af0fc742cab3ecdc578b628001",
@@ -2710,11 +2633,7 @@
 					"_x2_bound": 160,
 					"_x_bound": -544,
 					"_y2_bound": 656,
-					"_y_bound": 208,
-					"acid_surface_bubbles": "@eval deserialize('6dedc5f1aec04a84ab2604a290dd765c')",
-					"liquid_surface": "@eval deserialize('0b7c8ddb489b413788f18ae06edb61c4')",
-					"top_obj": "@eval deserialize('45704ee7fd3049d28889764a841a16c4')",
-					"underlay_obj": "@eval deserialize('9f3861c47ef04bdb8a6eaf60aa169d0a')"
+					"_y_bound": 208
 				},
 				"time_in_frame": 69,
 				"type": "acid_controller",
@@ -2722,28 +2641,65 @@
 				"y": 320
 			},
 			{
-				"_uuid": "4b7a0ef1f7b647c1aca748e0adcdb00d",
-				"activation_area": [78,108,689,511],
+				"_uuid": "4458b656933043e8b77ca68e8320f460",
+				"activation_area": [-258,1452,1153,1855],
 				"created": true,
 				"current_frame": "normal",
 				"custom": true,
-				"cycle": 34,
-				"label": "_79267b9b",
+				"cycle": 25,
+				"label": "_1b37",
 				"particles": "bubbles,fizz",
 				"property_data": {
-					"_x2_bound": 640,
-					"_x_bound": 128,
-					"_y2_bound": 512,
-					"_y_bound": 208,
-					"acid_surface_bubbles": "@eval deserialize('d88784cf7fc04241bcd46485fd11ac8e')",
-					"liquid_surface": "@eval deserialize('c39d5ae0227f4746802d646b13d0bec9')",
-					"top_obj": "@eval deserialize('3cb2cf818e464846befe95a748a5c727')",
-					"underlay_obj": "@eval deserialize('1a9c2e7c3fc84d849f0b1b25c19705ee')"
+					"_x2_bound": 1104,
+					"_x_bound": -208,
+					"_y2_bound": 1856,
+					"_y_bound": 1552
 				},
-				"time_in_frame": 33,
+				"time_in_frame": 24,
 				"type": "acid_controller",
-				"x": 160,
-				"y": 224
+				"x": 192,
+				"y": 1632
+			},
+			{
+				"_uuid": "e16c55b6611b45689ba0fee78c57a982",
+				"activation_area": [1054,1436,1809,1727],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 25,
+				"label": "_7d93",
+				"particles": "bubbles,fizz",
+				"property_data": {
+					"_x2_bound": 1760,
+					"_x_bound": 1104,
+					"_y2_bound": 1728,
+					"_y_bound": 1536
+				},
+				"time_in_frame": 24,
+				"type": "acid_controller",
+				"upside_down": true,
+				"x": 1376,
+				"y": 1504
+			},
+			{
+				"_uuid": "a70904a7b7ab497bb9ad91f293e00d37",
+				"activation_area": [3134,60,3761,1855],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 20,
+				"label": "_14cc",
+				"particles": "bubbles,fizz",
+				"property_data": {
+					"_x2_bound": 3712,
+					"_x_bound": 3184,
+					"_y2_bound": 1856,
+					"_y_bound": 160
+				},
+				"time_in_frame": 19,
+				"type": "acid_controller",
+				"x": 3392,
+				"y": 352
 			},
 			{
 				"_uuid": "9a7a21a9035948a1b00847e662a9a036",
@@ -2758,11 +2714,7 @@
 					"_x2_bound": 1264,
 					"_x_bound": 640,
 					"_y2_bound": 416,
-					"_y_bound": 160,
-					"acid_surface_bubbles": "@eval deserialize('5414bc162c8a4d42b5b7f3a333f32f97')",
-					"liquid_surface": "@eval deserialize('6f2eb16bc3614703aac90cfa7cc7a0d2')",
-					"top_obj": "@eval deserialize('6f6d45d160d14813aee70e8654ea3f0c')",
-					"underlay_obj": "@eval deserialize('0fd90eb3cdb74bbcaa9911d6fc235d94')"
+					"_y_bound": 160
 				},
 				"time_in_frame": 40,
 				"type": "acid_controller",
@@ -2782,11 +2734,7 @@
 					"_x2_bound": 3200,
 					"_x_bound": 2720,
 					"_y2_bound": 1600,
-					"_y_bound": 1024,
-					"acid_surface_bubbles": "@eval deserialize('cbc3508050a94a9daace2731063a8e10')",
-					"liquid_surface": "@eval deserialize('973d892bd3134e049b5bd14be44ef16a')",
-					"top_obj": "@eval deserialize('a47616003a3b4151b33601781ce6c9fc')",
-					"underlay_obj": "@eval deserialize('d07299d7fe06441486bd844746630a7b')"
+					"_y_bound": 1024
 				},
 				"time_in_frame": 24,
 				"type": "acid_controller",
@@ -2806,31 +2754,37 @@
 					"_x2_bound": 4368,
 					"_x_bound": 3712,
 					"_y2_bound": 800,
-					"_y_bound": 192,
-					"acid_surface_bubbles": "@eval deserialize('ecc12ba82edc4f988b8f7de13bdcbb00')",
-					"liquid_surface": "@eval deserialize('0fbb3d180c554c83bef1052fd2e3a075')",
-					"top_obj": "@eval deserialize('87167dc711f341c39c08579e78604444')",
-					"underlay_obj": "@eval deserialize('3b1fb35b49934b5fadd7bc6230a720a7')"
+					"_y_bound": 192
 				},
 				"time_in_frame": 14,
 				"type": "acid_controller",
 				"x": 3712,
+				"y": 384
+			},
+			{
+				"_uuid": "9f2e6ab9db8d41879e22f6cb6540d0c7",
+				"activation_area": [1854,60,3233,639],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 27,
+				"label": "_74919655",
+				"particles": "bubbles,fizz",
+				"property_data": {
+					"_x2_bound": 3184,
+					"_x_bound": 1904,
+					"_y2_bound": 640,
+					"_y_bound": 160
+				},
+				"time_in_frame": 26,
+				"type": "acid_controller",
+				"x": 3168,
 				"y": 384
 			}
 		]
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,,nbr,nbr,nbr,nbr
@@ -3062,7 +3016,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf
@@ -3255,16 +3209,6 @@
 			"y": -3488,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background_behind_trees"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",
@@ -3721,57 +3665,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "near_player_foreground_effects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",
@@ -4049,26 +3943,6 @@ msh,msh
 			"y": -2336,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Putrid Pools",
