--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -382,6 +382,7 @@
 			init: "1.0",
 			get: "_data",
 			set: "[set(_data,value), set_squish_animation_draw_bounds]",
+			persistent: false,
 		},
 
 		trigger_squish_animation: "def(decimal magnitude) -> commands
