--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -30,12 +30,16 @@ properties: {
 	add_water_effect: "commands :: add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, water_color)",
 	add_particle_effect: "commands :: []",
 	surface_type: "string :: 'surface_still'",
-	liquid_surface: { //The surface wobbles around relative to the water because the surface is on the pixel grid, but the water renders in screen space which is *not* on the pixel grid.
+	liquid_surface: {
+			/*
+				The surface wobbles around relative to the water because the surface is on the pixel grid, but the water renders in screen space which is *not* on the pixel grid.
+			*/
 		type: "custom_obj", //liquid.surface does not exist yet?
 		init: "object('${me.type}.${me.surface_type}', x,y, {
 			parent: me,
 			zorder: lib.zorder.get('water_surface'), //Place surface line over water effect, as it may be opaque.
 		})",
+		persistent: false,
 	},
 
 	liquid_damage: "int :: 0",
