--- a/data/level/Forest/relative-respite.cfg
+++ b/data/level/Forest/relative-respite.cfg
@@ -6,10 +6,10 @@
 	"background_palette": "forest_autumn",
 	"character": [
 		{
-			"_addr": "0x11a404000",
+			"_uuid": "d229449f2b17418689a0aed61cbb38e3",
 			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"custom": true,
+			"is_human": true,
 			"label": "_16f3fd0a",
 			"objects_destroyed": {
 				"level": "relative-respite.cfg",
@@ -20,156 +20,156 @@
 			"y": 128
 		},
 		{
-			"_addr": "0x121ce7e00",
+			"_uuid": "d3df05c1304e44e3aa968f8da3cfb108",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4955f39e",
 			"type": "rock_background_cubic1",
 			"x": 11,
 			"y": -833
 		},
 		{
-			"_addr": "0x121ce8600",
+			"_uuid": "f16c53dee9e248c8b4ef1a8858c71dab",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_16951332",
 			"type": "rock_background_cubic4",
 			"x": -21,
 			"y": -1089
 		},
 		{
-			"_addr": "0x121ce8e00",
+			"_uuid": "0a129d970793481caea7d17b5860b5d5",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_47d2189b",
 			"type": "rock_background_cubic3",
 			"x": 41,
 			"y": -1168
 		},
 		{
-			"_addr": "0x121cbee00",
+			"_uuid": "9a7b001c649b43bc811163b502268996",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7a579727",
 			"type": "rock_background_cubic1",
 			"x": 482,
 			"y": -1085
 		},
 		{
-			"_addr": "0x121cbf600",
+			"_uuid": "1a682cc37e8d49d2ab5a494de8396556",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_60b47c81",
 			"type": "rock_background_cubic1",
 			"x": -647,
 			"y": -745
 		},
 		{
-			"_addr": "0x121cbfe00",
+			"_uuid": "c3adf64030ca482b965ea74a80c0e4a0",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_46d55dc9",
 			"type": "rock_background_cubic4",
 			"x": -935,
 			"y": -465
 		},
 		{
-			"_addr": "0x121cc0600",
+			"_uuid": "73219905dcf34a88ae56d2f797131f55",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_fa6f494",
 			"type": "rock_background_cubic3",
 			"x": -999,
 			"y": -529
 		},
 		{
-			"_addr": "0x121cc0e00",
+			"_uuid": "8dbcbdba509642c599f101613661499a",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_11e5be1c",
 			"type": "rock_background_cubic2",
 			"x": -647,
 			"y": -465
 		},
 		{
-			"_addr": "0x121cc1600",
+			"_uuid": "4694d94c754f4172bfe3ff988eca6505",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_71cd8425",
 			"type": "rock_background_cubic2",
 			"x": -804,
 			"y": 79
 		},
 		{
-			"_addr": "0x121cc1e00",
+			"_uuid": "3bb00129266247528ed483a47d4dd23f",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_611a9c41",
 			"type": "rock_background_cubic1",
 			"x": -708,
 			"y": -17
 		},
 		{
-			"_addr": "0x121cc2600",
+			"_uuid": "f569e937858d44e1aa65bbaa21544228",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2f8f51d0",
 			"type": "rock_background_cubic4",
 			"x": -915,
 			"y": 55
 		},
 		{
-			"_addr": "0x121cc2e00",
+			"_uuid": "39028d0810274c6b8d0ec5b0bbfd3e8d",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_37349355",
 			"type": "rock_background_cubic3",
 			"x": -1046,
 			"y": 77
 		},
 		{
-			"_addr": "0x121cc3600",
+			"_uuid": "27e61018fbcd4f2e994cb39cfefdf3ac",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_29cf0d85",
 			"type": "rock_background_cubic3",
 			"x": -1446,
 			"y": 70
 		},
 		{
-			"_addr": "0x121cc3e00",
+			"_uuid": "84474c2cbf1144efb1e3f8d0e7fa3ec7",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_541661e0",
 			"type": "rock_background_cubic1",
 			"x": -374,
 			"y": 47
 		},
 		{
-			"_addr": "0x121cc4600",
+			"_uuid": "743c3db876f14d4c935ee913cef1fdf6",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3fcac07a",
 			"type": "rock_background_cubic3",
 			"x": -438,
 			"y": -17
 		},
 		{
-			"_addr": "0x121cc4e00",
+			"_uuid": "df583e819bd143719e38ab697932b728",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_d1453b6",
 			"type": "rock_background_cubic3",
 			"x": 26,
 			"y": -248
 		},
 		{
-			"_addr": "0x121cc5600",
+			"_uuid": "77076c65d0a94432ac4943f2cacbd4c1",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1cf2ce7e",
 			"type": "rock_background_cubic4",
 			"x": 92,
@@ -177,27 +177,27 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x121cc5e00",
+			"_uuid": "fd15b46cc9684b58a6ae5b22cebe34c7",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_53a72ee8",
 			"type": "rock_background_cubic1",
 			"x": 151,
 			"y": -417
 		},
 		{
-			"_addr": "0x121cc6600",
+			"_uuid": "cfe905fbbbf54eb6a52e4aefdb1c0d76",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_749c8a15",
 			"type": "rock_background_cubic2",
 			"x": 181,
 			"y": -171
 		},
 		{
-			"_addr": "0x121cc7600",
+			"_uuid": "6a690db2d8014118940bad6aa2ec77c2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5fed3f8",
 			"property_data": {
 				"_x2_bound": 880,
@@ -211,9 +211,9 @@
 			"y": 64
 		},
 		{
-			"_addr": "0x121cc7e00",
+			"_uuid": "a48648170a884bd5a04b0692e3614c30",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1f249997",
 			"property_data": {
 				"_x2_bound": 1008,
@@ -227,9 +227,9 @@
 			"y": -1184
 		},
 		{
-			"_addr": "0x121cc8600",
+			"_uuid": "e8930f01e89e487088711ce353fd1d9f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_141b8e7d",
 			"property_data": {
 				"_x2_bound": -144,
@@ -243,10 +243,10 @@
 			"y": -832
 		},
 		{
-			"_addr": "0x121cc9600",
+			"_uuid": "b6bd9486c01047008d13e2b523129c65",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "berd_man",
 			"on_postfight_speech": "speech_dialog(
                                     set(level.zoom, 2),
@@ -513,10 +513,10 @@
 			"y": 127
 		},
 		{
-			"_addr": "0x121ccca00",
+			"_uuid": "caa0402067b14d6bb69f5fa1fc661adf",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "target",
 			"on_start_level": "if(level.player.get_stored_event('berds_post_mushroom_boss_speech') or (level.player.get_stored_event('mushroom_boss_fight_won') = null), [lib.audio.play_music(me,'DreamlandJourney.ogg'),remove_object(me)],
 								[set(level.zoom, 1.5),fire_event(get_object_or_die(level, 'camera1'),'triggered')]
@@ -532,193 +532,193 @@
 			"y": 64
 		},
 		{
-			"_addr": "0x121ce2800",
+			"_uuid": "7d2922b0a6f24e1c8e5d70122e494198",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_231b722b",
 			"type": "stalagmite_foreground3",
 			"x": -2029,
 			"y": 383
 		},
 		{
-			"_addr": "0x121ce3000",
+			"_uuid": "4d3d21088dd045a093307673aebdd9e2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_29d17add",
 			"type": "stalagmite_foreground1",
 			"x": -1844,
 			"y": 342
 		},
 		{
-			"_addr": "0x121ce3800",
+			"_uuid": "342c7b0fc0e9480c80d20e3e0b0597bc",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_427c07db",
 			"type": "stalagmite_foreground3",
 			"x": -1494,
 			"y": 287
 		},
 		{
-			"_addr": "0x121ce4000",
+			"_uuid": "ebf0a6f33c95495990e982235e33d197",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5a9e8249",
 			"type": "stalagmite_foreground1",
 			"x": -2544,
 			"y": 388
 		},
 		{
-			"_addr": "0x121cdb600",
+			"_uuid": "ca158566fdd8477daf23284f3ddffbc4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4988d6f5",
 			"type": "stalagmite_foreground2",
 			"x": -2304,
 			"y": 420
 		},
 		{
-			"_addr": "0x121cdbe00",
+			"_uuid": "ee0f2bd119104635a589ba74ccb6462e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_32aaa646",
 			"type": "stalagmite_foreground1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -2528,
 			"y": -144
 		},
 		{
-			"_addr": "0x121cdc600",
+			"_uuid": "4fdbf70a9436413ea907c5ec918c8986",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7d94072b",
 			"type": "stalagmite_foreground1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -1746,
 			"y": -80
 		},
 		{
-			"_addr": "0x121cdce00",
+			"_uuid": "103f42e2512c4c3594428d03f4fcfc64",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_5419ee41",
 			"type": "stalagmite_foreground1",
 			"x": -1598,
 			"y": -441
 		},
 		{
-			"_addr": "0x121cd7800",
+			"_uuid": "b5bf81291b084e41b20dc3ff0cd6f007",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_62a6800d",
 			"type": "stalagmite_foreground1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -1422,
 			"y": -948
 		},
 		{
-			"_addr": "0x121cd8000",
+			"_uuid": "7bcdbbded13b44a599c9a81f8b7baa46",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_53b74cf8",
 			"type": "stalagmite_foreground3",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -1220,
 			"y": -1053
 		},
 		{
-			"_addr": "0x121cd8800",
+			"_uuid": "02d5416cfd9c481bb408a2a0649edfbb",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_65830081",
 			"type": "stalagmite_foreground3",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -300,
 			"y": -1254
 		},
 		{
-			"_addr": "0x121cd9000",
+			"_uuid": "ca94983549074571adb27917253f6347",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_29c3d42e",
 			"type": "stalagmite_foreground1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -492,
 			"y": -1350
 		},
 		{
-			"_addr": "0x121cd0400",
+			"_uuid": "50071201f4d348519bdd9e2c9129ac45",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_70bbd014",
 			"type": "stalagmite_foreground1",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 437,
 			"y": -1414
 		},
 		{
-			"_addr": "0x121cd0c00",
+			"_uuid": "f9fa58d724c04706bf192eeaf561e943",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2b6759b2",
 			"type": "stalagmite_foreground2",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -163,
 			"y": -1420
 		},
 		{
-			"_addr": "0x121cd1400",
+			"_uuid": "e154a98e94ab43e7ba099549c8d28e72",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_62650c87",
 			"type": "stalagmite_foreground4",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -898,
 			"y": -1484
 		},
 		{
-			"_addr": "0x121cd1c00",
+			"_uuid": "528d2d60c5fc423096bb21ddd5e8e443",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_24274cfb",
 			"type": "stalagmite_foreground4",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 684,
 			"y": -1354
 		},
 		{
-			"_addr": "0x121cd2400",
+			"_uuid": "e99e79684a314a75b418b845ad52345b",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_671781a",
 			"type": "stalagmite_foreground4",
 			"x": 620,
 			"y": -814
 		},
 		{
-			"_addr": "0x121cd2c00",
+			"_uuid": "18150c8e8ee84ab4a23c4c8f70f0ad86",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2af78a5b",
 			"type": "stalagmite_foreground1",
 			"x": 384,
 			"y": -782
 		},
 		{
-			"_addr": "0x121cd3400",
+			"_uuid": "ea1adbd3c05c4caba54e821e5aa2a3ff",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_3b368fc6",
 			"type": "stalagmite_foreground2",
 			"x": 128,
@@ -726,20 +726,20 @@
 			"zsub_order": 2
 		},
 		{
-			"_addr": "0x121cd3c00",
+			"_uuid": "66b2e56546f84bf69b3b832148c719a4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_142c0e90",
 			"type": "stalagmite_foreground3",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 59,
 			"y": -651,
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x121cd4400",
+			"_uuid": "331a3f52cc05436d8ffa9db93046eece",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7f9cf4ff",
 			"type": "stalagmite_foreground3",
 			"x": 160,
@@ -747,81 +747,81 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x121cd4c00",
+			"_uuid": "d9508cff376546bfbf642ba5f91accb4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_cace68a",
 			"type": "stalagmite_foreground4",
 			"x": 352,
 			"y": -180
 		},
 		{
-			"_addr": "0x121cd5400",
+			"_uuid": "df7e1e3dda2a4377b57f083623889410",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_5ca0934b",
 			"type": "stalagmite_foreground2",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 288,
 			"y": -505
 		},
 		{
-			"_addr": "0x121cd5c00",
+			"_uuid": "4b8e00cda9f245be85a747b6eafd50ee",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_159d2030",
 			"type": "stalagmite_foreground2",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -1995,
 			"y": -108
 		},
 		{
-			"_addr": "0x121ced200",
+			"_uuid": "8dd4d343c68e4e7e97b524f228bda841",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2c5efc02",
 			"type": "stalagmite_foreground3",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -2262,
 			"y": -172
 		},
 		{
-			"_addr": "0x121ceda00",
+			"_uuid": "1b989659f2c04b23ab40e908ae41ba88",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_63316c11",
 			"type": "rock_background_cubic1",
 			"x": -2112,
 			"y": 319
 		},
 		{
-			"_addr": "0x121cee200",
+			"_uuid": "749ff38ce5914600940f2d2a9b6ee15c",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_4af1bad2",
 			"type": "rock_background_cubic2",
 			"x": -1989,
 			"y": 15
 		},
 		{
-			"_addr": "0x121ceea00",
+			"_uuid": "69d46dceb4c44c8dbcb2df7669b683f2",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_6b6d70e1",
 			"type": "rock_background_cubic3",
 			"x": -1625,
 			"y": 198
 		},
 		{
-			"_addr": "0x121cef200",
+			"_uuid": "08c3b8f1f4cb4efd918732b5026bbe28",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "camera1",
 			"on_cut": "[
 				set(level.player.control_lock, null),
@@ -852,9 +852,9 @@
 			"y": 256
 		},
 		{
-			"_addr": "0x121cf3200",
+			"_uuid": "6b4bb21066e24da8a598972ce99e470b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "target2",
 			"on_triggered": "[fire_event(get_object_or_die(level,'berd_man'), 'postfight_speech'),die()]",
 			"property_data": {
@@ -868,10 +868,10 @@
 			"y": 128
 		},
 		{
-			"_addr": "0x121cf3a00",
+			"_uuid": "8397fb5f49614d0ebdd693b999b5a8c1",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "ravenish_ravine_exit",
 			"property_data": {
 				"_dest_door": "relative_respite_exit",
@@ -882,36 +882,36 @@
 			"y": -1472
 		},
 		{
-			"_addr": "0x121cfac00",
+			"_uuid": "8ddd18eb308c4e9d87317a6ecb7a5b71",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_737b405a",
 			"type": "breakable_block_corrodible",
 			"x": -544,
 			"y": -896
 		},
 		{
-			"_addr": "0x121cfb400",
+			"_uuid": "57738fc32f05405398ca85f9474b0c24",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_254413fa",
 			"type": "breakable_block_corrodible",
 			"x": -544,
 			"y": -832
 		},
 		{
-			"_addr": "0x121cf1e00",
+			"_uuid": "c403767f4ec54b87b223a675027caa63",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_32f5cc08",
 			"type": "breakable_block_corrodible",
 			"x": -416,
 			"y": -800
 		},
 		{
-			"_addr": "0x121cf2600",
+			"_uuid": "c5c3260ef36f4e7a864ecaccc1f40bbe",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_6343cfd6",
 			"property_data": {
 				"kind": "@eval enum item_acid_breath_talisman"
@@ -921,9 +921,9 @@
 			"y": -234
 		},
 		{
-			"_addr": "0x12431ce00",
+			"_uuid": "9d5e25e94b00435bae7bd8af31b2c4ed",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5306591b",
 			"property_data": {
 				"_x2_bound": 623,
@@ -948,7 +948,7 @@
 	"serialized_objects": {
 		"character": []
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
@@ -1206,7 +1206,7 @@ msh,msh",
 		}
 	],
 	"title": "",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
